# 1bilh-odelinhas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/: compare.py  create_measurements.py  etl_dask.py  etl_fireducks.py  etl_pandas.py  etl_polars.py  etl_pyspark.py  using_bash_and_awk.sh
src/airflow/: requirements.txt
src/airflow/dags/: dag_etl_dask.py  dag_etl_duckdb.py  dag_etl_fireducks.py  dag_etl_pandas.py  dag_etl_polars.py  dag_etl_python.py
src/airflow/include/: final_summary.parquet  measurements_summary.parquet  measurements_summary.txt
src/airflow/include/tmp_chunks/: measurements_summary_0.parquet  measurements_summary_1.parquet  measurements_summary_10.parquet  measurements_summary_100.parquet  measurements_summary_101.parquet  measurements_summary_102.parquet  measurements_summary_103.parquet  measurements_summary_104.parquet  measurements_summary_105.parquet  measurements_summary_106.parquet  measurements_summary_107.parquet  measurements_summary_108.parquet  measurements_summary_109.parquet  measurements_summary_11.parquet  measurements_summary_110.parquet  measurements_summary_111.parquet  measurements_summary_112.parquet  measurements_summary_113.parquet  measurements_summary_114.parquet  measurements_summary_115.parquet  measurements_summary_116.parquet  measurements_summary_117.parquet  measurements_summary_118.parquet  measurements_summary_119.parquet  measurements_summary_12.parquet  measurements_summary_120.parquet  measurements_summary_121.parquet  measurements_summary_122.parquet  measurements_summary_123.parquet  (+171 more)
