[tool.poetry]
name = "1 bilhão de linhas"
version = "0.1.0"
description = ""
authors = ["Thiago Silva Farias <thiago_protect@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
tqdm = "^4.66.4"
duckdb = "^1.0.0"
streamlit = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
