[tool.poetry]
name = "um-bilhao-de-linhas"
version = "0.1.0"
description = ""
authors = ["Thiago Silva Farias <thiago_protect@hotmail.com>"]
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pandas = "^2.2.2"
tqdm = "^4.66.4"
duckdb = "^1.0.0"
streamlit = "^1.37.0"
dask = "^2024.7.1"
polars = "^1.3.0"
fireducks = { version = "^1.2.1", markers = "sys_platform == 'linux'" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
